댓글 부분 수정 부분 빼고 완료 했습니다

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.location=/Users/sin-inseon/2024Workspace/plzProject-main/upload
+spring.servlet.multipart.location=C:\\uploads
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
 
