--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.application.name=securityDomo
+#spring.application.name=securityDomo
+server.port=8085
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/plz
-spring.datasource.username=twodb
+spring.datasource.username=cbj
 spring.datasource.password=1234
 
 logging.level.org.springframework=info
@@ -19,14 +20,14 @@ spring.thymeleaf.cache=false
 spring.jpa.open-in-view=false
 
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.location=/Users/sin-inseon/2024Workspace/plzProject-main/src/main/resources/static/upload
+spring.servlet.multipart.location=C:\\uploads
 
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
 
-com.lyj.securitydomo.upload.path=/Users/sin-inseon/2024Workspace/plzProject-main/src/main/resources/static/upload
+com.lyj.securitydomo.upload.path=C:\\upload
 
-spring.web.resources.static-locations=file:/Users/sin-inseon/2024Workspace/plzProject-main/src/main/resources/static/upload
+spring.web.resources.static-locations=file:C:\\uploads
 
 
 # 404 ??? ??? ? NoHandlerFoundException? ???? ??
