--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.application.name=securityDomo
-server.port=8085
+spring.application.name=securityDomo
+#server.port=8085
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/plz
 spring.datasource.username=cbj
@@ -29,3 +29,17 @@ spring.web.resources.static-locations=file:C://upload
 #?? ??? ??? ? ????? ?? ?? ??? ??????
 # 404 ??? ??? ? NoHandlerFoundException? ???? ??
 spring.web.resources.add-mappings=false
+
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+
+spring.security.oauth2.client.registration.kakao.client-name=kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.redirect-uri=http://lovalhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.client-id=1b9835751a7507d71bf02516b43fbffe
+
+spring.security.oauth2.client.registration.kakao.client-secret=	7oXR36Swaq2vRMZRVTBoS8ko2qV7DP55
+spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
