카카오 로그인 수정중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,13 @@ spring.security.oauth2.client.registration.kakao.client-id=1b9835751a7507d71bf02
 spring.security.oauth2.client.registration.kakao.client-secret=	7oXR36Swaq2vRMZRVTBoS8ko2qV7DP55
 spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
+
+spring:
+security:
+oauth2:
+client:
+registration:
+kakao:
+client-id: ${1b9835751a7507d71bf02516b43fbffe}
+client-secret: ${7oXR36Swaq2vRMZRVTBoS8ko2qV7DP55}
+redirect-uri: http://localhost:8085/login/oauth2/code/kakao
